fixed goback button inheriting wrong color on mobile

--- a/src/components/Header/NavBar.css
+++ b/src/components/Header/NavBar.css
@@ -219,6 +219,7 @@
 
 .menu-item.back {
   background-color: white;
+  color: var(--text-dark);
   cursor: pointer;
   border: none;
   font-weight: inherit;
